<resources>
    <string name="app_name">PDFTron Sign App</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="view">View</string>
    <string name="signed">Signed:</string>
    <string name="send">send</string>
    <string name="finish">Finish</string>
    <string name="name_required">Name required</string>
    <string name="email_required">Email required</string>
    <string name="password_required">Password required</string>
    <string name="password_hint">Password requires a minimum of 6 characters</string>
    <string name="register_user_failure">registerUser:failure</string>
    <string name="email_login_failure">emailLogin:failure</string>
    <string name="sign_in_with_credential_failure">signInWithCredential:failure</string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="dates_and_signatures_required">All Dates and Signatures Required</string>
    <string name="email">Email:</string>
    <string name="name">Name:</string>
    <string name="sign">Sign</string>
    <string name="from">From:</string>
    <string name="when">When:</string>
    <string name="name_hint">Name</string>
    <string name="add_user">Add User</string>
    <string name="next">Next</string>
    <string name="who_needs_to_sign">Who needs to sign?</string>
    <string name="sign_documents">Sign Documents</string>
    <string name="logout">Logout</string>
    <string name="review_signed_documents">Review Signed Documents</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>